# Meeting-Copilot

./: .gitattributes  .gitignore  CLAUDE.md  PROJECT_BRIEF.md  README.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-github.ps1
.claude/: launch.json
.github/workflows/: cd.yml  ci.yml  metrics.yml
api/: main.py  ws.py
audio/: __init__.py  __main__.py  capture.py
frontend/: index.html
llm/: __init__.py  query.py
src/meeting_copilot/: __init__.py  config.py  runtime_settings.py
src/meeting_copilot/api/: main.py  ws.py
src/meeting_copilot/audio/: __init__.py  __main__.py  capture.py
src/meeting_copilot/llm/: __init__.py  query.py
src/meeting_copilot/storage/: __init__.py  db.py  vector_store.py
src/meeting_copilot/transcription/: __init__.py  engine.py
src/tests/: conftest.py
src/tests/integration_testing/: conftest.py  test_smoke.py
src/tests/mass_testing/: conftest.py  test_mass_smoke.py
src/tests/unit_testing/: test_api.py  test_audio.py  test_llm.py  test_runtime_settings.py  test_storage.py
storage/: __init__.py  db.py  vector_store.py
tests/: conftest.py  test_api.py  test_storage.py
transcription/: __init__.py  engine.py
