[project]
name = "meeting-copilot"
version = "0.1.0"
requires-python = ">=3.11"

# Core deps — lightweight, used directly by tests (no mocking required)
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
# Install locally with: uv sync --extra full --extra dev
full = [
    # AI / transcription
    "faster-whisper>=1.0.1",
    "numpy>=1.26.0",
    "chromadb>=0.5.0",
    "ollama>=0.2.1",
    # Audio capture — Windows only (WASAPI loopback)
    "pyaudiowpatch>=0.2.12.6 ; sys_platform == 'win32'",
    "sounddevice>=0.4.6",
]
# CI installs this group. numpy is real (needed by audio tests); all other
# heavy deps (chromadb, faster-whisper, ollama, pyaudiowpatch) remain mocked.
dev = [
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "ty>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_copilot"]

# ── uv ────────────────────────────────────────────────────────────────────────

[tool.uv]
default-groups = []  # don't auto-install optional groups

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
# mass_testing excluded from the default run; unit + integration always run.
addopts = "-v --tb=short --ignore=src/tests/mass_testing"

# ── Black ─────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | data
  | __pycache__
  | frontend
)/
'''

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["data", "frontend", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # line length — handled by black

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── ty ────────────────────────────────────────────────────────────────────────

[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.rules]
# Optional heavy deps (chromadb, faster-whisper, ollama, pyaudiowpatch) are not
# installed in the dev environment — downgrade to warn so CI doesn't fail on them.
unresolved-import = "warn"
